# stack-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  release.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  dagger-pipeline.yml  demo-app-publish.yml  release-candidate.yml  release.yml
crates/dagger-pipeline/: Cargo.toml  README.md
crates/stack-cli/: Cargo.toml  README.md
crates/stack-cli/config/: cnpg-1.28.1.yaml  grafana.yaml  servers.json
crates/stack-cli/keycloak/: stack-cli-login.css  stack-cli-theme.properties  stack-cli.css
crates/stack-cli/src/: main.rs
crates/stack-cli/src/cli/: cloudflare.rs  deploy.rs  init.rs  manifest.rs  mod.rs  secrets.rs  status.rs
crates/stack-cli/src/operator/: crd.rs  reconcile.rs
crates/stack-cli/src/services/: auth.rs  cloudflare.rs  database.rs  deployment.rs  document_engine.rs  jwt_secrets.rs  keycloak.rs  keycloak_db.rs  llm.rs  mailhog.rs  mod.rs  network_policy.rs  nginx.rs  oauth2_proxy.rs  observability.rs  pgadmin.rs  postgrest.rs  rabbitmq.rs  realtime.rs  redis.rs  selenium.rs  storage.rs
demo-apps/: bionic.stack.yaml  demo.stack.yaml  deploy.stack.yaml
examples/my-rari-app/: .env.example  .gitignore  README.md  pnpm-lock.yaml  vite.config.ts
examples/react-supabase-example/: .env.example  Justfile  README.md  index.html  pnpm-lock.yaml
examples/react-supabase-next/: .env.example  .env.local  Justfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
infra-as-code/: bionic.stack.yaml  demo.stack.yaml
(+158 files in other folders)
