[package]
name = "stack-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] } 
# Library for talking to Kubernetes API
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
kube-derive = "2.0" # Support for Custom Resource Definitions
kube-runtime = "2.0" # Custom controller support
futures = "0.3"
futures-util = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.2"
# Custom Error definitions and convenient error mappings
thiserror = "1" 

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
anyhow = "1.0.44"
url = "2"

rand = "0.9"
base64 = "0.13.0"
jsonwebtoken = "9"

# For the CLI
clap = { version = "4.5", features = ["derive"] }
local-ip-address = "0.6"
